<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.signinfragments.SigninFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    style="@style/poppins_semi_bold_header_20px"
                    android:layout_width="match_parent"
                    android:layout_marginStart="@dimen/page_margin_left"
                    android:layout_marginTop="@dimen/_40dp"
                    android:layout_marginEnd="@dimen/page_margin_right"
                    android:gravity="center"
                    android:text="@string/welcome_back"
                    android:textColor="@color/ash_color" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/shoeeee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/page_margin_left"
                    android:layout_marginEnd="@dimen/page_margin_right"
                    android:orientation="vertical">

                    <TextView
                        style="@style/poppins_semi_bold_header_main_25px"
                        android:layout_marginTop="@dimen/_30dp"
                        android:text="@string/login"
                        android:textColor="@color/dark_blue_color" />

                    <EditText
                        android:id="@+id/et_mobile_no"
                        style="@style/poppins_regular_16px"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_20dp"
                        android:background="@drawable/edit_text_backround"
                        android:gravity="center"
                        android:hint="@string/your_phone_number" />

                    <Button
                        android:id="@+id/btn_verification"
                        style="@style/button_poppins_semi_bold_header_20px"
                        android:layout_width="match_parent"
                        android:layout_marginTop="@dimen/_35dp"
                        android:background="@drawable/background_edittext_border"
                        android:minHeight="@dimen/button_height"
                        android:text="@string/verification"
                        android:textColor="@color/white" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_90dp"
                    android:src="@drawable/wave" />

            </LinearLayout>

        </FrameLayout>

    </ScrollView>

</LinearLayout>